[package]
name = "muffin_quest"
version = "0.1.0"
authors = ["Magos Daishi <magosdaishi@magosdaishi.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "~0.8.1"
legion = "=0.3.1"
ron = "0.8.0"
serde = "1.0.147"

[profile.release]
lto = "thin"